# SOD

./: CMakeLists.txt  README.md
include/: derivatives.h  split.h
src/: derivatives.cpp  main.cpp  main_omp.cpp  nov_5_omp.cpp  nov_5_tri.cpp  split.cpp
